--- a/hacking-rubys-ast/reveal.js/index.html
+++ b/hacking-rubys-ast/reveal.js/index.html
@@ -41,8 +41,28 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h2>Talk title</h2>
-					<h3>....</h3>
+					<h1>Exploiting Ruby's abstract syntax tree for fun and for profit</h1>
+					<h2>A love story in 3 chapters</h2>
+				</section>
+
+				<section>
+					<h2>Who am I?</h2>
+					<ul>
+					  <li>Timo Rößner</li>
+					  <li>Berlin, Germany</li>
+					  <li>Working for Blacklane</li>
+					</ul>
+				</section>
+
+				<section>
+					<h2>What is an abstract syntax tree?</h2>
+					<p>An AST is usually the result of the syntax analysis phase of a compiler. It often serves as an intermediate representation of the program through several stages that the compiler requires, and has a strong impact on the final output of the compiler.</p>
+					<p>[Show where an AST is produced in ruby's lifecycle]</p>
+					<p>[How does it look like?]</p>
+					<p>[The syntax is "abstract" in not representing every detail appearing in the real syntax.]</p>
+					<p>[An AST is not specific to ruby]</p>
+					<p>[An AST consists of SEXPs]</p>
+					<p>[What are SEXPs?]</p>
 				</section>
 
 				<section>
