--- a/hacking-rubys-ast/reveal.js/index.html
+++ b/hacking-rubys-ast/reveal.js/index.html
@@ -110,7 +110,7 @@
 
 				<section>
 					<h2>What can you do with an AST?</h2>
-					<p> # Detect and fix syntax (rubocop) </p>
+					<p> # enforce styleguides and linting (rubocop) </p>
 					<p> # convert syntax (synvert) </p>
 				</section>
 
