--- a/hacking-rubys-ast/reveal.js/index.html
+++ b/hacking-rubys-ast/reveal.js/index.html
@@ -119,21 +119,32 @@
 				</section>
 
 				<section>
-					<h2>What can you do with an AST?</h2>
-					<p> # enforce styleguides and linting (rubocop) </p>
-					<p> # convert syntax (synvert) </p>
+					<h2>How to exploit an AST - chapter 1</h2>
+					<h3> Enforce styleguides and linting</h3>
+					<p> # Rubocop example</p>
 				</section>
 
 				<section>
-					<h2>What can you do with an AST?</h2>
-					<p> # Detect high level smells </p>
-					<p> # What is a smell? </p>
-					<p> # Reek </p>
+					<h2>How to exploit an AST - chapter 1</h2>
+					<h3>How does rubocop do this?</h3>
+				</section>
+
+
+				<section>
+					<h2>How to exploit an AST - chapter 1</h2>
+					<h3> Convert syntax</h3>
+					<p> # Synvert example</p>
 				</section>
 
 				<section>
-					<h2>What can you do with an AST?</h2>
-					<p> # mutation testing (mutant) </p>
+					<h2>How to exploit an AST - chapter 2</h2>
+					<h3>Detect high level code smells</h3>
+					<p>A code smell is a hint that something might be wrong, not a certainty. A perfectly good idiom may be considered a code smell because it’s often misused, or because there’s a simpler alternative that works in most cases. Calling something a code smell is not an attack; it’s simply a sign that a closer look is warranted.</p>
+				</section>
+
+				<section>
+					<h2>How to exploit an AST - chapter 3</h2>
+					<h3>Mutation testing</h3>
 				</section>
 
 				<section>
