Add 'How to check contributions on other repositories'.

--- a/how-to-use-gitHub-to-evaluate-developers/reveal.js/index.html
+++ b/how-to-use-gitHub-to-evaluate-developers/reveal.js/index.html
@@ -116,6 +116,12 @@
 				</section>
 
 				<section>
+					<h2>How to check contributions on other repositories?</h2>
+					<p>Sometimes a candidates contributions to projects he does not own are hard to see...</p>
+					<p>you can directly append ?author=<theusername> or ?author=<emailaddress> to the url. For example, https://github.com/jquery/jquery/commits/master?author=dmethvin</p>
+				</section>
+
+				<section>
 					<h2>How can you use this?</h2>
 					<p>Evaluate a candidates interests</p>
 				</section>
