First draft of "github for the impatient".

--- a/how-to-use-gitHub-to-evaluate-developers/reveal.js/index.html
+++ b/how-to-use-gitHub-to-evaluate-developers/reveal.js/index.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>How to use github to evaluate developers</h1>
+					<h1>How to use github to find developers</h1>
 				</section>
 
 				<section>
@@ -55,59 +55,66 @@
 				</section>
 
 				<section>
-					<h2>What is github?</h2>
-					<!-- Quick show of hands -->
-					<!-- followed by a "out of everbody who raised his hand, who can explain it to me in one sentence?" -->
+					<h2>So...github?</h2>
+					<p class="fragment">Who knows github?</p>
+					<p class="fragment">Who works with github on a regular base?</p>
+				</section>
+
+
+				<section>
+					<h2>github for the impatient</h2>
+					<p class="fragment">Code hosting <a target="_blank" href="https://github.com/torvalds/linux">platform</a></p><!-- Github search -> Linux -->
+					<p class="fragment">Enabling team-based <a target="_blank" href="https://github.com/rails/rails">development</a></p><!-- Github search -> RubyOnRails -->
+					<p class="fragment">For open and <a target="_blank" href="https://github.com/zalando">closed source software</a></p>
 				</section>
 
 				<section>
-					<h2>It's a platform for code hosting</h2>
-					<p>Like what?</p>
-					<ul>
-						<li>
-	            <a href="https://github.com/torvalds/linux">Linux</a>
-						</li>
-						<li>
-	            <a href="https://github.com/rails/rails">Ruby on Rails</a>
-						</li>
-					</ul>
+					<h2>github for the patient</h2>
+					<p>To understand how to use github you must understand what developers actually want</p>
 				</section>
 
 				<section>
-					<h2>But not limited to code</h2>
-					<ul>
-						<li>
-	            <a href="https://github.com/bundestag/gesetze">German legislation</a>
-	            .....
-						</li>
-					</ul>
+					<h2>developers love to share</h2>
+					<p class="fragment">Contrary to common beliefs, developers are a very social species</p>
+					<p class="fragment">An endless amount of public projects just exist....for the sake of sharing</p>
+					<p class="fragment">Operating systems (Android, Linux)</p>
+					<p class="fragment">Programming languages (Ruby, Swift)</p>
 				</section>
 
 				<section>
-					<h2>Collaboration!</h2>
-					<ul>
-						<li>
-	            .....
-	            .....
-						</li>
-					</ul>
+					<h2>developers seek recognition from their peers</h2>
+					<!-- Show the repos with the highest star rankings -->
+					<p class="fragment">"stars" allow you to express a <a target="_blank" href="https://github.com/rails/rails">"like"</a></p>
+					<!-- TODO below -->
+					<p class="fragment">you can express gratitude in <a target="_blank" href="https://github.com/rails/rails">issues (TODO: Fix link)</a></p>
+					<p class="fragment">or in <a target="_blank" href="https://github.com/rails/rails">pull requests (TODO: Fix link)</a></p>
 				</section>
 
 				<section>
-					<h2>Have fun!</h2>
-					<ul>
-						<li>
-	            <a href="https://github.com/NARKOZ/hacker-scripts#hacker-scripts">Lazy Programmer</a>
-						</li>
-						<li>
-	            including discussions regarding<a href="https://github.com/NARKOZ/hacker-scripts/issues/3">the coffee machine</a>
-						</li>
-					</ul>
+					<h2>developers want to work on interesting problems</h2>
+					<!-- Gh: search for a project, look up issue, contribute -->
+					<p>you can search for your area of interest (ranging from machine learning to controlling cooking appliances</p>
+					<p >scout interesting looking projects</p>
+					<p >get to know them</p>
+					<p >contribute!</p>
 				</section>
 
 				<section>
-					<h2>Good developers love to share</h2>
-					<p>...and github makes this spectacularly easy and fun. That's why it's so popular</p>
+					<h2>developers want to create something that is actually used</h2>
+					<p >you can get an idea of how msny users you have via issues / pull requests</p>
+					<p >TODO: network graph? Pulse`</p>
+				</section>
+
+				<section>
+					<h2>developers want to learn</h2>
+					<p >nothing better than pull requests for learning</p>
+					<p >TODO: Swift example</p>
+				</section>
+
+				<section>
+					<h2>developers want to talk about technology</h2>
+					<p >...or just <a target="_blank" href="https://github.com/NARKOZ/hacker-scripts/issues/3">chit chat about coffee machines</a></p>
+					<p >...or talk about <a target="_blank" href="https://github.com/bundestag/gesetze">legislation</a></p>
 				</section>
 
 				<section>
