First draft of "Evaluate candidates".

--- a/how-to-use-gitHub-to-evaluate-developers/reveal.js/index.html
+++ b/how-to-use-gitHub-to-evaluate-developers/reveal.js/index.html
@@ -118,29 +118,47 @@
 				</section>
 
 				<section>
-					<h2>How can you use this?</h2>
-					<p>Evaluate a candidates source code</p>
+					<h2>So how can I find developers using github?</h2>
+					<p class="fragment">Well...you can't</p>
+					<p class="fragment">github is not a recruiting platform</p>
+					<p class="fragment">It doesn't offer any recruiting-related search functionality</p>
+					<p class="fragment">But you can use it to evaluate developers!</p>
 				</section>
 
 				<section>
-					<h2>How to check contributions on other repositories?</h2>
-					<p>Sometimes a candidates contributions to projects he does not own are hard to see...</p>
-					<p>you can directly append ?author=<theusername> or ?author=<emailaddress> to the url. For example, https://github.com/jquery/jquery/commits/master?author=dmethvin</p>
+					<h2>Measure his activity</h2>
+					<p>On his own projects...</p>
+					<p>But also on other people's projects</p>
+					<p>Pro tip: you can directly append ?author=<theusername> or ?author=<emailaddress> to the url. For example, https://github.com/jquery/jquery/commits/master?author=dmethvin</p>
+					<p>In theory activity does not relate to quality at all, but experience shows that in reality it often does</p>
 				</section>
 
 				<section>
-					<h2>How can you use this?</h2>
-					<p>Evaluate a candidates interests</p>
+					<h2>Get to know his interests</h2>
+					<p></p>
 				</section>
 
 				<section>
-					<h2>How can you use this?</h2>
-					<p>Evaluate a candidates social skills</p>
+					<h2>Check his social skills</h2>
+					<p></p>
 				</section>
 
 				<section>
-					<h2>How can you use this?</h2>
-					<p>Evaluate a candidates cultural fit</p>
+					<h2>Assess his cultural fit</h2>
+					<p></p>
+				</section>
+
+				<section>
+					<h2>A classical github workflow (ok, it's my workflow)</h2>
+					<p></p>
+				</section>
+
+				<section>
+					<h2>Recap</h2>
+					<p>Developer love github</p>
+					<p>github will not help you finding developers</p>
+					<p>But it can help you evaluate them</p>
+					<p>All github can give you are clues and guidelines. People might be awesome but still fall under the radar</p>
 				</section>
 			</div>
 
