Work on the ending.

--- a/how-to-use-gitHub-to-evaluate-developers/reveal.js/index.html
+++ b/how-to-use-gitHub-to-evaluate-developers/reveal.js/index.html
@@ -41,7 +41,7 @@
 			<!-- Any section element inside of this container is displayed as a slide -->
 			<div class="slides">
 				<section>
-					<h1>How to use github to find developers</h1>
+					<h1>How to use github to evaluate developers</h1>
 				</section>
 
 				<section>
@@ -50,7 +50,7 @@
 					  <li>Timo Rößner</li>
 					  <li>Berlin, Germany</li>
 					  <li>Director of Engineering @ Blacklane</li>
-					  <li>Part of the <a href="https://github.com/troessner/reek">Reek</a> and <a href="https://github.com/whitesmith/rubycritic">RubyCritic</a> core team</li>
+					  <li>Part of the <a href="https://github.com/troessner/reek">Reek</a> and <a href="https://github.com/whitesmith/rubycritic">RubyCritic</a> core team (hosted @ github)</li>
 					</ul>
 				</section>
 
@@ -69,52 +69,65 @@
 				</section>
 
 				<section>
-					<h2>github for the patient</h2>
-					<p>To understand how to use github you must understand what developers actually want</p>
+					<h2>open source software</h2>
+					<p class="fragment">The term "open source" refers to something that can be modified and shared because its design is publicly accessible</p>
+					<p class="fragment">Open source software is software whose source code is available for modification or enhancement by anyone</p>
+					<ul class="fragment">
+						<li>Operating systems (Android, Linux)</li>
+						<li>Programming languages (Ruby, Swift, Java)</li>
+						<li>User applications (Firefox, OpenOffice</li>
+					</ul>
 				</section>
 
 				<section>
-					<h2>developers love to share</h2>
-					<p class="fragment">Contrary to common beliefs, developers are a very social species</p>
-					<p class="fragment">An endless amount of public projects just exist....for the sake of sharing</p>
-					<p class="fragment">Operating systems (Android, Linux)</p>
-					<p class="fragment">Programming languages (Ruby, Swift)</p>
+					<h2>closed source software</h2>
+					<p class="fragment">With closed source software, the source code is not shared with the public for anyone to look at or make changes to.Closed source is the opposite of open source.</p>
+					<ul class="fragment">
+						<li>Operating systems (MacOS, Windows)</li>
+						<li>Programming languages (Apex)</li>
+						<li>User applications (Internet Explorer, MS Office)</li>
+					</ul>
 				</section>
 
 				<section>
-					<h2>developers seek recognition from their peers</h2>
+					<h2>Ok, so how do I use github</h2>
+					<p class="fragment">To understand how to use github you must understand what developers actually want</p>
+				</section>
+
+				<section>
+					<h2>Developers want to work on interesting problems</h2>
+					<!-- Gh: search for a project, look up issue, contribute -->
+					<p class="fragment">You can search for your area of interest (from <a target="_blank" href="https://github.com/search?utf8=%E2%9C%93&q=machine+learning">machine learning</a> to <a target="_blank" href="https://github.com/search?utf8=%E2%9C%93&q=control+coffee+machine&type=Repositories&ref=searchresults">controling coffee machines</a>)</p>
+					<p class="fragment">Scout <a target="_blank" href="https://github.com/tensorflow/tensorflow">interesting looking projects</a></p>
+					<p class="fragment">Get to know them (download, read code, play around, check out <a target="_blank" href="https://github.com/tensorflow/tensorflow">its issues</a>)</p>
+					<p class="fragment"><a target="_blank" href="https://github.com/tensorflow/tensorflow/pulls">Contribute!</a></p>
+				</section>
+
+				<section>
+					<h2>Developers seek recognition from their peers</h2>
 					<!-- Show the repos with the highest star rankings -->
-					<p class="fragment">"stars" allow you to express a <a target="_blank" href="https://github.com/rails/rails">"like"</a></p>
+					<p class="fragment">"stars" allow other developers to express a kine of like<a target="_blank" href="https://github.com/rails/rails">"like"</a></p>
 					<!-- TODO below -->
-					<p class="fragment">you can express gratitude in <a target="_blank" href="https://github.com/rails/rails">issues (TODO: Fix link)</a></p>
+					<p class="fragment">Others can express gratitude in <a target="_blank" href="https://github.com/bbatsov/rubocop/issues/2551">issues</a></p>
 					<p class="fragment">or in <a target="_blank" href="https://github.com/rails/rails">pull requests (TODO: Fix link)</a></p>
 				</section>
 
 				<section>
-					<h2>developers want to work on interesting problems</h2>
-					<!-- Gh: search for a project, look up issue, contribute -->
-					<p>you can search for your area of interest (ranging from machine learning to controlling cooking appliances</p>
-					<p >scout interesting looking projects</p>
-					<p >get to know them</p>
-					<p >contribute!</p>
+					<h2>Developers want to create something that is actually used</h2>
+					<p class="fragment">You can get an idea of how many users you have via issues / pull requests</p>
+					<p class="fragment">TODO: network graph? Pulse`</p>
 				</section>
 
 				<section>
-					<h2>developers want to create something that is actually used</h2>
-					<p >you can get an idea of how msny users you have via issues / pull requests</p>
-					<p >TODO: network graph? Pulse`</p>
-				</section>
-
-				<section>
-					<h2>developers want to learn</h2>
+					<h2>Developers have the urge to learn</h2>
 					<p >nothing better than pull requests for learning</p>
 					<p >TODO: Swift example</p>
 				</section>
 
 				<section>
-					<h2>developers want to talk about technology</h2>
-					<p >...or just <a target="_blank" href="https://github.com/NARKOZ/hacker-scripts/issues/3">chit chat about coffee machines</a></p>
-					<p >...or talk about <a target="_blank" href="https://github.com/bundestag/gesetze">legislation</a></p>
+					<h2>Developers love to talk about technology</h2>
+					<p class="fragment">...or just <a target="_blank" href="https://github.com/NARKOZ/hacker-scripts/issues/3">chit chat about coffee machines</a></p>
+					<p class="fragment">...or talk about literally anything e.g. <a target="_blank" href="https://github.com/bundestag/gesetze">legislation</a></p>
 				</section>
 
 				<section>
@@ -127,10 +140,10 @@
 
 				<section>
 					<h2>Measure his activity</h2>
-					<p>On his own projects...</p>
-					<p>But also on other people's projects</p>
-					<p>Pro tip: you can directly append ?author=<theusername> or ?author=<emailaddress> to the url. For example, https://github.com/jquery/jquery/commits/master?author=dmethvin</p>
-					<p>In theory activity does not relate to quality at all, but experience shows that in reality it often does</p>
+					<p class="fragment">On his <a target="_blank" href="https://github.com/tenderlove">own projects</a></p>
+					<p class="fragment">But also on <a target="_blank" href="https://github.com/ruby/ruby">other people's projects</a></p>
+					<p class="fragment">You can directly append ?author=<theusername> or ?author=<emailaddress> to <a target="_blank" href="https://github.com/ruby/ruby/commits/trunk?author=tenderlove">the url</a> to check out his contributions</p>
+					<p class="fragment">In theory activity does not relate to quality at all but experience shows that in practice it often does</p>
 				</section>
 
 				<section>
@@ -155,10 +168,15 @@
 
 				<section>
 					<h2>Recap</h2>
-					<p>Developer love github</p>
-					<p>github will not help you finding developers</p>
-					<p>But it can help you evaluate them</p>
-					<p>All github can give you are clues and guidelines. People might be awesome but still fall under the radar</p>
+					<p class="fragment">Developers love github</p>
+					<p class="fragment">github will not help you to find developers</p>
+					<p class="fragment">But it can help you to evaluate them</p>
+					<p class="fragment">All github can give you are hints and clues. There are no golden rules</p>
+				</section>
+
+				<section>
+					<h2>Thank you!</h2>
+					<p class="fragment">Questions?</p>
 				</section>
 			</div>
 
