Work on "developers love...".

--- a/how-to-use-gitHub-to-evaluate-developers/reveal.js/index.html
+++ b/how-to-use-gitHub-to-evaluate-developers/reveal.js/index.html
@@ -90,13 +90,19 @@
 				</section>
 
 				<section>
+					<h2>github's main weapons</h2>
+					<p class="fragment"><a target="_blank" href="https://github.com/rails/rails">Code hosting</a></p>
+					<p class="fragment"><a target="_blank" href="https://github.com/rails/rails/issues">Issues</a></p>
+					<p class="fragment"><a target="_blank" href="https://github.com/rails/rails/pulls">Pull requests</a></p>
+				</section>
+
+				<section>
 					<h2>Ok, so how do I use github</h2>
 					<p class="fragment">To understand how to use github you must understand what developers actually want</p>
 				</section>
 
 				<section>
 					<h2>Developers want to work on interesting problems</h2>
-					<!-- Gh: search for a project, look up issue, contribute -->
 					<p class="fragment">You can search for your area of interest (from <a target="_blank" href="https://github.com/search?utf8=%E2%9C%93&q=machine+learning">machine learning</a> to <a target="_blank" href="https://github.com/search?utf8=%E2%9C%93&q=control+coffee+machine&type=Repositories&ref=searchresults">controling coffee machines</a>)</p>
 					<p class="fragment">Scout <a target="_blank" href="https://github.com/tensorflow/tensorflow">interesting looking projects</a></p>
 					<p class="fragment">Get to know them (download, read code, play around, check out <a target="_blank" href="https://github.com/tensorflow/tensorflow">its issues</a>)</p>
@@ -105,23 +111,24 @@
 
 				<section>
 					<h2>Developers seek recognition from their peers</h2>
-					<!-- Show the repos with the highest star rankings -->
 					<p class="fragment">"stars" allow other developers to express a kine of like<a target="_blank" href="https://github.com/rails/rails">"like"</a></p>
-					<!-- TODO below -->
 					<p class="fragment">Others can express gratitude in <a target="_blank" href="https://github.com/bbatsov/rubocop/issues/2551">issues</a></p>
 					<p class="fragment">or in <a target="_blank" href="https://github.com/rails/rails">pull requests (TODO: Fix link)</a></p>
 				</section>
 
 				<section>
-					<h2>Developers want to create something that is actually used</h2>
-					<p class="fragment">You can get an idea of how many users you have via issues / pull requests</p>
-					<p class="fragment">TODO: network graph? Pulse`</p>
+					<h2>Developers want to create something popular</h2>
+					<p class="fragment">Github gives you a feeling for popularity via ...</p>
+					<p class="fragment"><a target="_blank" href="https://github.com/rails/rails">Stars</a></p>
+					<p class="fragment">Issue & pull request <a target="_blank" href="https://github.com/rails/rails/issues">count</a></p>
+					<p class="fragment">The <a target="_blank" href="https://github.com/rails/rails/pulse">pulse</a></p>
 				</section>
 
 				<section>
 					<h2>Developers have the urge to learn</h2>
-					<p >nothing better than pull requests for learning</p>
-					<p >TODO: Swift example</p>
+					<p class="fragment"><a target="_blank" href="https://github.com/explore">Explore github</a></p>
+					<p class="fragment">Subscribe to <a target="_blank" href="https://github.com/bbatsov/rubocop/issues/2557">pull requests / issues</a></p>
+					<p class="fragment">Read <a target="_blank" href="https://github.com/bbatsov/rubocop/pull/2528/files">pull requests / issues</a></p>
 				</section>
 
 				<section>
@@ -148,22 +155,19 @@
 
 				<section>
 					<h2>Get to know his interests</h2>
-					<p></p>
+					<p>TODO</p>
 				</section>
 
 				<section>
-					<h2>Check his social skills</h2>
-					<p></p>
-				</section>
-
-				<section>
-					<h2>Assess his cultural fit</h2>
-					<p></p>
+					<h2>Check his social skills / cultural fit</h2>
+					<p>TODO</p>
 				</section>
 
 				<section>
 					<h2>A classical github workflow (ok, it's my workflow)</h2>
-					<p></p>
+					<p class="fragment">Check out his <a target="_blank" href="https://github.com/tenderlove">profile</a></p>
+					<p class="fragment">Check out his <a target="_blank" href="https://github.com/tenderlove?tab=activity">public activity</a></p>
+					<p class="fragment">Check out his <a target="_blank" href="https://github.com/tenderlove?tab=repositories">repositories</a></p>
 				</section>
 
 				<section>
