--- a/hacking-rubys-ast/reveal.js/index.html
+++ b/hacking-rubys-ast/reveal.js/index.html
@@ -56,6 +56,14 @@
 				</section>
 
 				<section>
+					<h2>What is an Abstract Syntx Tree?</h2>
+				  <p class="fragment">To answer this question, we need to answer another question first</p>
+				  <p class="fragment">How does a computer run your program?</p>
+				</section>
+
+				<!-- Status quo -->
+
+				<section>
 					<h2>How does Ruby run your program??</h2>
 					<p>
 						# TODO: How do Rubinius and Jruby do that? Should be the same
