Refine latter slides.

--- a/how-to-use-gitHub-to-evaluate-developers.html
+++ b/how-to-use-gitHub-to-evaluate-developers.html
@@ -4,10 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 
-		<title>reveal.js - The HTML Presentation Framework</title>
-
-		<meta name="description" content="A framework for easily creating beautiful presentations using HTML">
-		<meta name="author" content="Hakim El Hattab">
+		<title>How to use github to evaluate developers</title>
 
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
@@ -15,7 +12,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, minimal-ui">
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css" id="theme">
+		<link rel="stylesheet" href="css/theme/white.css" id="theme">
 
 		<!-- Code syntax highlighting -->
 		<link rel="stylesheet" href="lib/css/zenburn.css">
@@ -50,7 +47,7 @@
 					  <li>Timo Rößner</li>
 					  <li>Berlin, Germany</li>
 					  <li>Director of Engineering @ Blacklane</li>
-					  <li>Part of the <a href="https://github.com/troessner/reek">Reek</a> and <a href="https://github.com/whitesmith/rubycritic">RubyCritic</a> core team (hosted @ github)</li>
+					  <li>Part of the <a target="_blank" href="https://github.com/troessner/reek">Reek</a> and <a target="_blank" href="https://github.com/whitesmith/rubycritic">RubyCritic</a> core team (hosted @ github)</li>
 					</ul>
 				</section>
 
@@ -65,23 +62,24 @@
 					<h2>github for the impatient</h2>
 					<p class="fragment">Code hosting <a target="_blank" href="https://github.com/torvalds/linux">platform</a></p><!-- Github search -> Linux -->
 					<p class="fragment">Enabling team-based <a target="_blank" href="https://github.com/rails/rails">development</a></p><!-- Github search -> RubyOnRails -->
-					<p class="fragment">For open and <a target="_blank" href="https://github.com/zalando">closed source software</a></p>
+					<p class="fragment">For open and <a target="_blank" href="https://github.com/Microsoft">closed source software</a></p>
 				</section>
 
 				<section>
 					<h2>open source software</h2>
-					<p class="fragment">The term "open source" refers to something that can be modified and shared because its design is publicly accessible</p>
-					<p class="fragment">Open source software is software whose source code is available for modification or enhancement by anyone</p>
+					<p class="fragment"><i>Open source</i> refers to something that can be modified and shared because its design is publicly accessible</p>
+					<p class="fragment"><i>Open source software</i> is available for modification or enhancement by anyone</p>
 					<ul class="fragment">
 						<li>Operating systems (Android, Linux)</li>
 						<li>Programming languages (Ruby, Swift, Java)</li>
-						<li>User applications (Firefox, OpenOffice</li>
+						<li>User applications (Firefox, OpenOffice)</li>
 					</ul>
 				</section>
 
 				<section>
 					<h2>closed source software</h2>
-					<p class="fragment">With closed source software, the source code is not shared with the public for anyone to look at or make changes to.Closed source is the opposite of open source.</p>
+					<p class="fragment">With <i>closed source software</i>, the source code is not shared with the public for anyone to look at or make changes to.</p>
+					<p class="fragment"><i>Closed source</i> is the opposite of <i>open source</i>.</p>
 					<ul class="fragment">
 						<li>Operating systems (MacOS, Windows)</li>
 						<li>Programming languages (Apex)</li>
@@ -91,19 +89,19 @@
 
 				<section>
 					<h2>github's main weapons</h2>
-					<p class="fragment"><a target="_blank" href="https://github.com/rails/rails">Code hosting</a></p>
+					<p class="fragment"><a target="_blank" href="https://github.com/rails/rails">Repositories</a></p>
 					<p class="fragment"><a target="_blank" href="https://github.com/rails/rails/issues">Issues</a></p>
 					<p class="fragment"><a target="_blank" href="https://github.com/rails/rails/pulls">Pull requests</a></p>
 				</section>
 
 				<section>
-					<h2>Ok, so how do I use github</h2>
+					<h2>Ok, so how do I use github?</h2>
 					<p class="fragment">To understand how to use github you must understand what developers actually want</p>
 				</section>
 
 				<section>
 					<h2>Developers want to work on interesting problems</h2>
-					<p class="fragment">You can search for your area of interest (from <a target="_blank" href="https://github.com/search?utf8=%E2%9C%93&q=machine+learning">machine learning</a> to <a target="_blank" href="https://github.com/search?utf8=%E2%9C%93&q=control+coffee+machine&type=Repositories&ref=searchresults">controling coffee machines</a>)</p>
+					<p class="fragment">Search for your area of interest - from <a target="_blank" href="https://github.com/search?utf8=%E2%9C%93&q=machine+learning">machine learning</a> to <a target="_blank" href="https://github.com/search?utf8=%E2%9C%93&q=control+coffee+machine&type=Repositories&ref=searchresults">controlling coffee machines</a></p>
 					<p class="fragment">Scout <a target="_blank" href="https://github.com/tensorflow/tensorflow">interesting looking projects</a></p>
 					<p class="fragment">Get to know them (download, read code, play around, check out <a target="_blank" href="https://github.com/tensorflow/tensorflow">its issues</a>)</p>
 					<p class="fragment"><a target="_blank" href="https://github.com/tensorflow/tensorflow/pulls">Contribute!</a></p>
@@ -111,9 +109,9 @@
 
 				<section>
 					<h2>Developers seek recognition from their peers</h2>
-					<p class="fragment">"stars" allow other developers to express a kine of like<a target="_blank" href="https://github.com/rails/rails">"like"</a></p>
+					<p class="fragment"><i>Stars</i> allow other developers to express a kind of <a target="_blank" href="https://github.com/rails/rails">"like"</a></p>
 					<p class="fragment">Others can express gratitude in <a target="_blank" href="https://github.com/bbatsov/rubocop/issues/2551">issues</a></p>
-					<p class="fragment">or in <a target="_blank" href="https://github.com/rails/rails">pull requests (TODO: Fix link)</a></p>
+					<p class="fragment">Or in <a target="_blank" href="https://github.com/rails/rails/pulls">pull requests</a></p>
 				</section>
 
 				<section>
@@ -155,12 +153,15 @@
 
 				<section>
 					<h2>Get to know his interests</h2>
-					<p>TODO</p>
+					<p class="fragment">Public activity tells you a lot already</p>
+					<p class="fragment">Projects he stars</p>
+                    <p class="fragment">His own pet projects</p>
 				</section>
 
 				<section>
 					<h2>Check his social skills / cultural fit</h2>
-					<p>TODO</p>
+					<p class="fragment">Corporate vs startup</p>
+                    <p class="fragment">Style of communication</p>
 				</section>
 
 				<section>
@@ -180,7 +181,7 @@
 
 				<section>
 					<h2>Thank you!</h2>
-					<p class="fragment">Questions?</p>
+					<p>Questions?</p>
 				</section>
 			</div>
 
